deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nim-app
  namespace: nim-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nim-app
  template:
    metadata:
      labels:
        app: nim-app
    spec:
      containers:
        - name: nim-app
          image: quay.io/pbuscaronskrieger/nim-app:0.0.1
          ports:
            - containerPort: 8080
