deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nim-app
  namespace: nim-app
spec:
  selector:
    app: nim-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
