deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nim-app
  namespace: nim-app
spec:
  to:
    kind: Service
    name: nim-app
  port:
    targetPort: 8080
  tls:
    termination: edge
